# SQL_OPTIMIZER_LATEST

./: .coverage  .gitignore  .pre-commit-config.yaml  Database Migration Document - PostgreSQL to Cosmos DB  Microsoft SSO Setup Document  Note: Confluence Documents to be updated  README.md  SDK Template Updated  coverage.xml  docker-compose.sonar.yml  sonar-local.ps1
agent/liscence-optimizer/: .agenticai.yaml  .dockerignore  .env.example  .env.v1.1.0.example  .gitignore  Dockerfile  GITHUB_TEMPLATE_README.md  README.md  pyproject.toml  setup_template.py
agent/liscence-optimizer/cli/: __init__.py  __main__.py  main.py
agent/liscence-optimizer/configs/: config.v1.1.0.yaml  config.yaml  rules.base.yaml
agent/liscence-optimizer/docs/: LISCENCE_OPTIMIZER_ARCHITECTURE.md  README.md
agent/liscence-optimizer/prompts/: executive_summary.base.md
agent/liscence-optimizer/src/: __init__.py  __main__.py  a2a_server.py  guardrails.py
agent/liscence-optimizer/terraform/: README.md
agent/liscence-optimizer/tests/: test_guardrails_quality.py
app/: .env.example  .gitignore  Dockerfile  README.md  adjust_ui.py  conftest.py  coverage.xml  demand_data.json.checkpoint  fix_charts.py  fix_layout.py  fix_table_height.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  revert_ui.py  rightsizing.py  settings.py  sonar-project.properties  update_ui.py
app/.scannerwork/: report-task.txt
app/docs/: ARCHITECTURE_DIAGRAMS.md  ENTERPRISE_CHANGES_WALKTHROUGH.md  ENTERPRISE_IMPROVEMENTS.md  PERFORMANCE_BASELINE.md  architecture.md  configuration.md  integration-model.md  runbooks.md  schema.md  stresstest.md
app/optimizer/: admin.py  apps.py  context_processors.py  encryption.py  forms.py  groups.py  logger.py  middleware.py  models.py  permissions.py  scheduler.py  urls.py  views.py
app/optimizer/clients/: __init__.py  agent_client.py  base.py  cosmos_client.py  grafana_client.py  llm_client.py  usu_client.py
app/optimizer/migrations/: 0001_initial.py  0002_analysissession_result_user.py  0003_analysissession_completed_at_and_more.py  0003_userprofile.py  0004_merge_20260330_1330.py  0005_agentrun_licenserule_optimizationcandidate_tenant_and_more.py  0006_agentrun_agentic_report_fields.py  0007_seed_license_rules.py  0008_add_product_group.py  0009_userprofile_role.py  0010_agentrun_guardrails_fiields.py  0011_boonesrawrow.py  0012_boonefileupload.py
app/optimizer/rules/: __init__.py  column_utils.py  rightsizing.py  rule_azure_payg.py  rule_retired_devices.py
app/optimizer/services/: __init__.py  ai_report_generator.py  alerts.py  analysis_logs.py  analysis_service.py  chart_generator.py  cpu_utilisation_processor.py  data_quality.py  db_analysis_service.py  excel_processor.py  plotly_charts.py  report_export.py  rule_engine.py  upload_validator.py
app/optimizer/templatetags/: optimizer_filters.py
app/optimizer/tests/: test_admin_forms_logger_coverage.py  test_ai_report_generator.py  test_alerts_extra.py  test_analysis_logs.py  test_analysis_service.py  test_analysis_service_extra.py  test_chart_generator.py  test_views.py  (+37 more)
app/sql_license_optimizer/: asgi.py  settings.py  urls.py  wsgi.py
app/templates/: base.html
(+86 files in other folders)
