[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-license-optimizer"
version = "0.1.0"
description = "SQL Server license demand and optimization analysis from Excel"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["optimizer*", "sql_license_optimizer*"]
